add update treatment and lint
