# transport/models/prescription.go
@@ -13,3 +13,12 @@ type Prescription struct {
 	CreatedAt   time.Time `json:"createdAt" validate:"required"`
 	UpdatedAt   time.Time `json:"updatedAt" validate:"required"`
 }
+
+type PrescriptionForUpdate struct {
+	TreatmentID int64   `json:"treatmentId" validate:"required"`
+	Name        string  `json:"name" validate:"required"`
+	Dose        float64 `json:"dose" validate:"required"`
+	Course      string  `json:"course" validate:"required"`
+	Category    string  `json:"category"`
+	Option      string  `json:"option"`
+}
